Calendar fixed on main page (z-index and closing by bg click and mob button)

--- a/src/assets/styles/pages/e-index.scss
+++ b/src/assets/styles/pages/e-index.scss
@@ -4,7 +4,7 @@
     .date-modal{
       opacity: 1;
       pointer-events: unset;
-      z-index: 11;
+      z-index: 22;
     }
   }
   &__show{
